Resolved some overflow issues.

--- a/assets/css/explore.styl
+++ b/assets/css/explore.styl
@@ -91,7 +91,8 @@ $timeline_height = 25px
 	position relative
 	width 100%
 	height s("calc(100% - %s)", $timeline_height)
-	overflow hidden
+	
+	overflow-x hidden
 	
 .spacer 
 	width 100%
