--- a/assets/css/melt.styl
+++ b/assets/css/melt.styl
@@ -20,8 +20,8 @@
 .melt video
 	margin auto
 	height 100%
-	top -9999px
-	bottom -9999px
+	top 0
+	
 	left -9999px
 	right -9999px
 	z-index 1
